--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         style="width: 250px; border: 1px; border-radius: 20%"
       />
       <br />
-      <a href="C:/Elvan/Heart/envelope.html"
+      <a href="https://navvl.github.io/2/"
         ><button id="gift-btn">NEXTT !!💖</button></a
       >
       <br /><br />
